# qt_depdiscover_ui

./: CHANGELOG.md  CMakeLists.txt  README.md  create_appimage_modern.sh  cyclonedx-v2.1.0.json  cyclonedx.sbom.json  depdiscover.json  spdx-1.0.0.spdx
.github/workflows/: build_release.yml  depdiscover.yml_  quality_security.yml  repo-create_doctoc_md.yml  syn-to-gitlab.yml
docs/architecture/: architecture.md
include/: rz_config.hpp
include/models/: CVE.hpp  Dependency.hpp
include/utils/: CycloneDXParser.hpp  DepDiscoverParser.hpp  IParser.hpp  SPDXParser.hpp
include/views/: DependencyTableModel.hpp  MainWindow.hpp  PieChartWidget.hpp
resources/: QtDependencyTrackerUI.desktop
src/: main.cpp
